@@ -1,8 +1,9 @@
 package co.programmers.voucher_management.voucher.repository;
 
 import static co.programmers.voucher_management.customer.entity.Status.*;
+import static co.programmers.voucher_management.exception.ErrorCode.*;
 
-import java.text.MessageFormat;
+import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
@@ -10,15 +11,14 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.Random;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 
 import org.springframework.context.annotation.Profile;
 import org.springframework.stereotype.Repository;
 
-import co.programmers.voucher_management.voucher.entity.Status;
 import co.programmers.voucher_management.customer.entity.Customer;
 import co.programmers.voucher_management.exception.NoSuchDataException;
 import co.programmers.voucher_management.voucher.entity.DiscountStrategy;
+import co.programmers.voucher_management.voucher.entity.Status;
 import co.programmers.voucher_management.voucher.entity.Voucher;
 import co.programmers.voucher_management.voucher.service.DiscountTypeGenerator;
 
@@ -41,17 +41,25 @@ public class VoucherMemoryRepository implements VoucherRepository {
 		return repository.values()
 				.stream()
 				.filter(v -> v.getStatus().equals(NORMAL))
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 	@Override
 	public Optional<Voucher> findById(long id) {
 		Voucher foundVoucher = repository.get(id);
 		Status status = foundVoucher.getStatus();
+
 		if (status.equals(DELETED)) {
-			throw new NoSuchDataException(MessageFormat.format("No such voucher of id {0}", id));
+			throw new NoSuchDataException(VOUCHER_NOT_FOUND);
 		}
 		return Optional.of(foundVoucher);
+	}
+
+	@Override
+	public List<Voucher> findByDate(LocalDate startDate, LocalDate endDate) {
+		return repository.values()
+				.stream()
+				.toList();
 	}
 
 	@Override
@@ -65,21 +73,20 @@ public class VoucherMemoryRepository implements VoucherRepository {
 	public Voucher update(Voucher voucher) {
 		long id = voucher.getId();
 		findById(id);
+
 		String discountType = voucher.getDiscountStrategy().getType();
 		Integer discountAmount = voucher.getDiscountStrategy().getAmount();
 		DiscountStrategy discountStrategy = DiscountTypeGenerator.of(discountType, discountAmount);
+
 		repository.get(id).changeDiscountType(discountStrategy);
-		return findById(id).orElseThrow(
-				() -> new NoSuchDataException(MessageFormat.format("No such voucher of id {0}", id))
-		);
+		return findById(id).orElseThrow(() -> new NoSuchDataException(VOUCHER_NOT_FOUND));
 	}
 
 	@Override
 	public Voucher assignCustomer(Voucher voucher, Customer customer) {
 		long id = voucher.getId();
 		update(voucher);
-		return findById(id).orElseThrow(
-				() -> new NoSuchDataException(MessageFormat.format("No such voucher of id {0}", id)));
+		return findById(id).orElseThrow(() -> new NoSuchDataException(VOUCHER_NOT_FOUND));
 	}
 
 	@Override
@@ -87,7 +94,15 @@ public class VoucherMemoryRepository implements VoucherRepository {
 		return repository.values()
 				.stream()
 				.filter(v -> v.getCustomerId() == customerId)
-				.collect(Collectors.toList());
+				.toList();
+	}
+
+	@Override
+	public List<Voucher> findByType(String discountType) {
+		return repository.values()
+				.stream()
+				.filter(v -> discountType.equals(v.getDiscountStrategy().getType()))
+				.toList();
 	}
 
 	private Long assignId() {
